--- a/pricing.html
+++ b/pricing.html
@@ -31,7 +31,7 @@
         <div class="container-lg p-0">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1>
+                    <img src="img/logo.png" alt="img-fluid" width="50%">
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -39,17 +39,10 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="pricing.html" class="nav-item nav-link active">Pricing</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
-                            </div>
-                        </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="about.html" class="nav-item nav-link">Nosotros</a>
+                        <a href="service.html" class="nav-item nav-link active">Servicios</a>
+                        <a href="pricing.html" class="nav-item nav-link">Soluciones</a>
+                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
             </nav>
@@ -60,11 +53,11 @@
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5 mb-5">
-        <h1 class="display-4 text-white mb-3 mt-0 mt-lg-5">Pricing</h1>
+        <h1 class="display-4 text-white mb-3 mt-0 mt-lg-5">Soluciones</h1>
         <div class="d-inline-flex text-white">
             <p class="m-0"><a class="text-white" href="">Home</a></p>
             <p class="m-0 px-2">/</p>
-            <p class="m-0">Pricing</p>
+            <p class="m-0">Soluciones</p>
         </div>
     </div>
     <!-- Page Header Start -->
@@ -75,11 +68,10 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-6 text-center mb-5">
-                    <small class="d-inline bg-primary text-white text-uppercase font-weight-bold px-1">Our Pricing Plan</small>
-                    <h1 class="mt-2 mb-3">We Offer Affordable and Flexible Packages</h1>
-                    <h4 class="font-weight-normal text-muted mb-4">Lorem ut kasd dolores elitr sed est duo ea ipsum justo diam, est erat lorem. Est magna sea clita diam tempor elitr</h4>
-                    <h5 class="font-weight-bold mb-4">Need A Custom Package?</h5>
-                    <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Contact Now</a>
+                    <small class="d-inline bg-primary text-white text-uppercase font-weight-bold px-1">Soluciones</small>
+                    <h1 class="mt-2 mb-3">Soluciones</h1>
+                    <h4 class="font-weight-normal text-muted mb-4">Dinero Orgánico te ofrece soluciones reales a problemas frecuentes de sistemas burócratas, complejos y lentos.</h4>
+                    
                 </div>
             </div>
             <div class="row">
