--- a/service.html
+++ b/service.html
@@ -31,7 +31,7 @@
         <div class="container-lg p-0">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1>
+                    <img src="img/logo.png" alt="img-fluid" width="50%">
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -39,17 +39,10 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link active">Services</a>
-                        <a href="pricing.html" class="nav-item nav-link">Pricing</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
-                            </div>
-                        </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="about.html" class="nav-item nav-link">Nosotros</a>
+                        <a href="service.html" class="nav-item nav-link active">Servicios</a>
+                        <a href="pricing.html" class="nav-item nav-link">Soluciones</a>
+                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
             </nav>
@@ -60,11 +53,11 @@
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5 mb-5">
-        <h1 class="display-4 text-white mb-3 mt-0 mt-lg-5">Services</h1>
+        <h1 class="display-4 text-white mb-3 mt-0 mt-lg-5">Servicios</h1>
         <div class="d-inline-flex text-white">
             <p class="m-0"><a class="text-white" href="">Home</a></p>
             <p class="m-0 px-2">/</p>
-            <p class="m-0">Services</p>
+            <p class="m-0">Servicios</p>
         </div>
     </div>
     <!-- Page Header Start -->
@@ -75,11 +68,9 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-6 text-center mb-5">
-                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">What we do</small>
-                    <h1 class="mt-2 mb-3">We Offer Creative Services</h1>
-                    <h4 class="font-weight-normal text-muted mb-4">Lorem ut kasd dolores elitr sed est duo ea ipsum
-                        justo diam, est erat lorem. Est magna sea clita diam tempor elitr</h4>
-                    <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Discover More</a>
+                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">Qué hacemos</small>
+                    <h1 class="mt-2 mb-3">Qué hacemos</h1>
+                    <h4 class="font-weight-normal text-muted mb-4">Ayudamos a nuestros clientes en vida y gastos médicos mayores, ayudamos en la construcción de seguridad patrimonial financiera y gastos médicos de manera individual y en grupos, facilitamos las prestaciones de protección de vida en las empresas y la creación de fondo privado para la jubilación de empleados.</h4>
                 </div>
             </div>
             <div class="row">
@@ -87,11 +78,10 @@
                     <div class="d-flex">
                         <i class="fa fa-3x fa-laptop-code text-primary mr-4"></i>
                         <div class="d-flex flex-column">
-                            <h4 class="font-weight-bold mb-3">Web Design</h4>
-                            <p>Et kasd justo clita amet kasd, vero amet vero eos kasd diam justo, ipsum diam sed elitr
-                                erat</p>
-                            <a class="font-weight-semi-bold" href="">Read More <i
-                                    class="fa fa-angle-double-right"></i></a>
+                            <h4 class="font-weight-bold mb-3">Asesoría en riesgos de vida</h4>
+                            <ul>
+                                <li>Te ayudamos a encontrar la protección en Gastos Médicos Mayores que puedas pagar con el alcance que tú necesitas.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -99,11 +89,10 @@
                     <div class="d-flex">
                         <i class="fa fa-3x fa-code text-primary mr-4"></i>
                         <div class="d-flex flex-column">
-                            <h4 class="font-weight-bold mb-3">Development</h4>
-                            <p>Et kasd justo clita amet kasd, vero amet vero eos kasd diam justo, ipsum diam sed elitr
-                                erat</p>
-                            <a class="font-weight-semi-bold" href="">Read More <i
-                                    class="fa fa-angle-double-right"></i></a>
+                            <h4 class="font-weight-bold mb-3">Asesoría en planes para retiro</h4>
+                            <ul>
+                                <li>Te ayudamos a crear una pensión dentro del marco de la ley de manera segura.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -111,11 +100,10 @@
                     <div class="d-flex">
                         <i class="fa fa-3x fa-envelope-open-text text-primary mr-4"></i>
                         <div class="d-flex flex-column">
-                            <h4 class="font-weight-bold mb-3">Marketing</h4>
-                            <p>Et kasd justo clita amet kasd, vero amet vero eos kasd diam justo, ipsum diam sed elitr
-                                erat</p>
-                            <a class="font-weight-semi-bold" href="">Read More <i
-                                    class="fa fa-angle-double-right"></i></a>
+                            <h4 class="font-weight-bold mb-3">Orientación en salida de deuda de manera sana</h4>
+                            <ul>
+                                <li>Nosotros te apoyamos a salir de forma ordenada para construir una solidez financiera.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -123,11 +111,10 @@
                     <div class="d-flex">
                         <i class="fa fa-3x fa-chart-line text-primary mr-4"></i>
                         <div class="d-flex flex-column">
-                            <h4 class="font-weight-bold mb-3">Strategy</h4>
-                            <p>Et kasd justo clita amet kasd, vero amet vero eos kasd diam justo, ipsum diam sed elitr
-                                erat</p>
-                            <a class="font-weight-semi-bold" href="">Read More <i
-                                    class="fa fa-angle-double-right"></i></a>
+                            <h4 class="font-weight-bold mb-3"> Asesoría en proyectos patrimoniales personales de alta seguridad personal, legal, económica y financiera</h4>
+                            <ul>
+                                <li>Totalmente personalizados dentro de uno de los sistemas financiero legal más vigilado y seguro del planeta.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -135,11 +122,12 @@
                     <div class="d-flex">
                         <i class="fa fa-3x fa-search text-primary mr-4"></i>
                         <div class="d-flex flex-column">
-                            <h4 class="font-weight-bold mb-3">SEO</h4>
-                            <p>Et kasd justo clita amet kasd, vero amet vero eos kasd diam justo, ipsum diam sed elitr
-                                erat</p>
-                            <a class="font-weight-semi-bold" href="">Read More <i
-                                    class="fa fa-angle-double-right"></i></a>
+                            <h4 class="font-weight-bold mb-3">Servicios personalizados en hacer efectiva la póliza</h4>
+                            <ul>
+                                <li>Atención y acompañamiento en siniestros.</li>
+                                <li>Mensajería para personas dentro de la ZMG.</li>
+                                <li>Tramites vía remota con firma FAD.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -147,11 +135,11 @@
                     <div class="d-flex">
                         <i class="fa fa-3x fa-pen text-primary mr-4"></i>
                         <div class="d-flex flex-column">
-                            <h4 class="font-weight-bold mb-3">Content Writing</h4>
-                            <p>Et kasd justo clita amet kasd, vero amet vero eos kasd diam justo, ipsum diam sed elitr
-                                erat</p>
-                            <a class="font-weight-semi-bold" href="">Read More <i
-                                    class="fa fa-angle-double-right"></i></a>
+                            <h4 class="font-weight-bold mb-3">Asesoría en la obtención de Seguro de Gastos Médicos (Individual y de grupo)</h4>
+                            <ul>
+                                <li>Revisión de formularios por nuestros asesores médicos y legales.</li>
+                                <li>Estrategias de largo aliento para conservar tu póliza durante varios años.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
