--- a/servicios.html
+++ b/servicios.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DotCom - Creative Agency Website Template</title>
+    <title>Dinero Organico - Servicios</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -39,10 +39,10 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link active">Servicios</a>
-                        <a href="pricing.html" class="nav-item nav-link">Soluciones</a>
-                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
+                        <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
+                        <a href="servicios.html" class="nav-item nav-link">Servicios</a>
+                        <a href="soluciones.html" class="nav-item nav-link">Soluciones</a>
+                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
             </nav>
@@ -79,9 +79,7 @@
                         <i class="fa fa-3x fa-laptop-code text-primary mr-4"></i>
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Asesoría en riesgos de vida</h4>
-                            <ul>
-                                <li>Te ayudamos a encontrar la protección en Gastos Médicos Mayores que puedas pagar con el alcance que tú necesitas.</li>
-                            </ul>
+                            <p>Te ayudamos a encontrar la protección en Gastos Médicos Mayores que puedas pagar con el alcance que tú necesitas.</p>
                         </div>
                     </div>
                 </div>
@@ -90,9 +88,7 @@
                         <i class="fa fa-3x fa-code text-primary mr-4"></i>
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Asesoría en planes para retiro</h4>
-                            <ul>
-                                <li>Te ayudamos a crear una pensión dentro del marco de la ley de manera segura.</li>
-                            </ul>
+                            <p>Te ayudamos a crear una pensión dentro del marco de la ley de manera segura.</p>
                         </div>
                     </div>
                 </div>
@@ -101,9 +97,7 @@
                         <i class="fa fa-3x fa-envelope-open-text text-primary mr-4"></i>
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Orientación en salida de deuda de manera sana</h4>
-                            <ul>
-                                <li>Nosotros te apoyamos a salir de forma ordenada para construir una solidez financiera.</li>
-                            </ul>
+                            <p>Nosotros te apoyamos a salir de forma ordenada para construir una solidez financiera.</p>
                         </div>
                     </div>
                 </div>
@@ -112,9 +106,7 @@
                         <i class="fa fa-3x fa-chart-line text-primary mr-4"></i>
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3"> Asesoría en proyectos patrimoniales personales de alta seguridad personal, legal, económica y financiera</h4>
-                            <ul>
-                                <li>Totalmente personalizados dentro de uno de los sistemas financiero legal más vigilado y seguro del planeta.</li>
-                            </ul>
+                            <p>Totalmente personalizados dentro de uno de los sistemas financiero legal más vigilado y seguro del planeta.</p>
                         </div>
                     </div>
                 </div>
@@ -123,11 +115,9 @@
                         <i class="fa fa-3x fa-search text-primary mr-4"></i>
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Servicios personalizados en hacer efectiva la póliza</h4>
-                            <ul>
-                                <li>Atención y acompañamiento en siniestros.</li>
-                                <li>Mensajería para personas dentro de la ZMG.</li>
-                                <li>Tramites vía remota con firma FAD.</li>
-                            </ul>
+                            <p>Atención y acompañamiento en siniestros.</p>
+                            <p>Mensajería para personas dentro de la ZMG.</p>
+                            <p>Tramites vía remota con firma FAD.</p>
                         </div>
                     </div>
                 </div>
@@ -136,10 +126,8 @@
                         <i class="fa fa-3x fa-pen text-primary mr-4"></i>
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Asesoría en la obtención de Seguro de Gastos Médicos (Individual y de grupo)</h4>
-                            <ul>
-                                <li>Revisión de formularios por nuestros asesores médicos y legales.</li>
-                                <li>Estrategias de largo aliento para conservar tu póliza durante varios años.</li>
-                            </ul>
+                            <p>Revisión de formularios por nuestros asesores médicos y legales.</p>
+                            <p>Estrategias de largo aliento para conservar tu póliza durante varios años.</p>
                         </div>
                     </div>
                 </div>
@@ -149,7 +137,7 @@
     <!-- Services End -->
 
 
-    <!-- Testimonial Start -->
+    <!-- Testimonial Start 
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="row">
@@ -214,7 +202,7 @@
             </div>
         </div>
     </div>
-    <!-- Testimonial End -->
+     Testimonial End -->
 
 
     <!-- Footer Start -->
@@ -222,7 +210,7 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 mt-n2 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1>
+                    <img src="img/logo.png" alt="img-fluid" width="50%">
                 </a>
                 <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
                 <div class="d-flex justify-content-start mt-4">
@@ -236,24 +224,24 @@
                 <h5 class="font-weight-bold text-primary mb-4">Quick Links</h5>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Nosotros</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Servicios</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Soluciones</a>
+                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contactanos</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="font-weight-bold text-primary mb-4">Popular Links</h5>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Nosotros</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Servicios</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Soluciones</a>
+                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contactanos</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">Get In Touch</h5>
+                <h5 class="font-weight-bold text-primary mb-4">Ponte en contacto</h5>
                 <p>Dolor clita stet nonumy clita diam vero, et et ipsum diam labore</p>
                 <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
                 <p><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>
