--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DotCom - Creative Agency Website Template</title>
+    <title>Dinero Organico - Home</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -24,7 +24,6 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
-
 <body>
     <!-- Navbar Start -->
     <div class="container-fluid nav-bar p-0">
@@ -39,17 +38,16 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link active">Servicios</a>
-                        <a href="pricing.html" class="nav-item nav-link">Soluciones</a>
-                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
+                        <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
+                        <a href="servicios.html" class="nav-item nav-link">Servicios</a>
+                        <a href="soluciones.html" class="nav-item nav-link">Soluciones</a>
+                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
             </nav>
         </div>
     </div>
     <!-- Navbar End -->
-
 
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5">
@@ -96,19 +94,18 @@
     </div>
     <!-- Carousel End -->
 
-
-    <!-- About Start -->
-    <div class="container-fluid py-5">
+     <!-- About Start -->
+     <div class="container-fluid py-5">
         <div class="container">
             <div class="row align-items-center pb-1">
                 <div class="col-lg-5">
                     <img class="img-thumbnail p-3" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-7 mt-5 mt-lg-0">
-                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">Who We Are</small>
-                    <h1 class="mt-2 mb-4">Most Effective Creative Service Provider For Companies</h1>
-                    <p class="mb-4">Eirmod est dolor nonumy sea amet dolore erat sit dolor et dolor vero. Tempor ipsum at justo amet at ipsum justo. Aiam kasd sea sit dolor duo elitr dolor amet, justo est ipsum amet dolor ut ipsum. Labore diam et nonumy amet dolores. Volup sit labore dolores erat, magna justo sed lorem kasd ea dolor. Labore sit clita invidunt, est dolores lorem sed ipsum kasd no amet ipsum.</p>
-                    <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Read More</a>
+                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">¿Quienes somos?</small>
+                    <h1 class="mt-2 mb-4">Quienes somos</h1>
+                    <p class="mb-4">Somos una empresa de agentes de seguros especializados en el riesgo de personas y grupos, líderes en la orientación y seguimiento con más de 20 años de experiencia.
+                        Creamos relaciones cercanas con nuestros clientes para darles seguimiento en caso de requerir su póliza. Nos mantenemos al margen con el objetivo de ser de las primeras personas a las que acudas en situaciones extraordinarias.</p>
                 </div>
             </div>
             <div class="row mt-4">
@@ -116,7 +113,7 @@
                     <div class="d-flex align-items-center border mb-4 mb-lg-0 p-4" style="height: 120px;">
                         <i class="fa fa-2x fa-map-marker-alt text-primary mr-3"></i>
                         <div class="d-flex flex-column">
-                            <h5 class="font-weight-bold">Our Office</h5>
+                            <h5 class="font-weight-bold">Ubicación</h5>
                             <p class="m-0">123 Street, New York, USA</p>
                         </div>
                     </div>
@@ -125,7 +122,7 @@
                     <div class="d-flex align-items-center border mb-4 mb-lg-0 p-4" style="height: 120px;">
                         <i class="fa fa-2x fa-envelope-open text-primary mr-3"></i>
                         <div class="d-flex flex-column">
-                            <h5 class="font-weight-bold">Email Us</h5>
+                            <h5 class="font-weight-bold">Email</h5>
                             <p class="m-0">info@example.com</p>
                         </div>
                     </div>
@@ -134,7 +131,7 @@
                     <div class="d-flex align-items-center border mb-4 mb-lg-0 p-4" style="height: 120px;">
                         <i class="fas fa-2x fa-phone-alt text-primary mr-3"></i>
                         <div class="d-flex flex-column">
-                            <h5 class="font-weight-bold">Call Us</h5>
+                            <h5 class="font-weight-bold">Telefono</h5>
                             <p class="m-0">+012 345 6789</p>
                         </div>
                     </div>
@@ -143,7 +140,6 @@
         </div>
     </div>
     <!-- About End -->
-
 
     <!-- Services Start -->
     <div class="container-fluid pt-5 pb-3">
@@ -204,27 +200,29 @@
     </div>
     <!-- Services End -->
 
-
     <!-- Features Start -->
     <div class="container-fluid pt-5 pb-2">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 mb-5">
-                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">Why Choose Us</small>
-                    <h1 class="mt-2 mb-3">25 Years Expereince</h1>
+                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">Por qué elegirnos</small>
+                    <h1 class="mt-2 mb-3">Por qué elegirnos</h1>
                     <h4 class="font-weight-normal text-muted mb-4">Lorem ut kasd dolores elitr sed est duo ea ipsum justo diam, est erat lorem</h4>
                     <div class="list-inline mb-4">
-                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Lorem ut kasd dolores elitr</p>
-                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Jsto dolor lorem ipsum</p>
-                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Diama ipsum est dolor</p>
+                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Tenemos más de 20 años de experiencia en la industria aseguradora.</p>
+                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Sabemos tratar con una persona cuando está necesitada.</p>
+                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Representamos a nuestros clientes frente a las aseguradoras.</p>
+                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>El cliente es nuestra prioridad.</p>
+                        <p class="font-weight-semi-bold mb-2"><i class="fa fa-angle-right text-primary mr-2"></i>Te acompañamos en tu proceso hasta el final.</p>
                     </div>
-                    <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Learn More</a>
+                    
                 </div>
                 <div class="col-lg-6">
+                    <!--
                     <div class="row">
                         <div class="col-sm-6 pb-1">
                             <div class="d-flex flex-column align-items-center border px-4 mb-4">
-                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">25</h2>
+                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">20</h2>
                                 <h5 class="font-weight-bold mb-4">Years Expereince</h5>
                             </div>
                         </div>
@@ -247,12 +245,12 @@
                             </div>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
     </div>
-    <!-- Features End -->
-
+	<!-- Features End -->
 
     <!-- Team Start -->
     <div class="container-fluid pt-5">
@@ -260,9 +258,8 @@
             <div class="row">
                 <div class="col-lg-4 mb-5">
                     <small class="bg-primary text-white text-uppercase font-weight-bold px-1">Meet The Team</small>
-                    <h1 class="mt-2 mb-3">Meet Experts of Behind Work</h1>
-                    <h4 class="font-weight-normal text-muted mb-4">Eirmod diam magna sed sea rebum, elitr diam dolor lorem ipsum, ipsum stet magna ea diam vero stet vero</h4>
-                    <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Meet All Experts</a>
+                    <h1 class="mt-2 mb-3">Conocenos</h1>
+                    <h4 class="font-weight-normal text-muted mb-4">Conoce a nuestro equipo que trabaja en conjunto para guiarte en tu proceso.</h4>
                 </div>
                 <div class="col-lg-8 mb-5">
                     <div class="owl-carousel team-carousel">
@@ -337,7 +334,6 @@
     </div>
     <!-- Team End -->
 
-
     <!-- Pricing Plan Start -->
     <div class="container-fluid pt-5">
         <div class="container">
@@ -393,7 +389,6 @@
         </div>
     </div>
     <!-- Pricing Plan End -->
-
 
     <!-- Testimonial Start -->
     <div class="container-fluid pt-5">
@@ -474,8 +469,7 @@
     </div>
     <!-- Testimonial End -->
 
-
-    <!-- Blog Start -->
+    <!-- Blog Start 
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center">
@@ -532,15 +526,14 @@
             </div>
         </div>
     </div>
-    <!-- Blog End -->
-
+     Blog End -->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-white mt-5 pt-5 px-sm-3 px-md-5">
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 mt-n2 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1>
+                    <img src="img/logo.png" alt="img-fluid" width="50%">
                 </a>
                 <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
                 <div class="d-flex justify-content-start mt-4">
@@ -554,24 +547,24 @@
                 <h5 class="font-weight-bold text-primary mb-4">Quick Links</h5>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Nosotros</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Servicios</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Soluciones</a>
+                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contactanos</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="font-weight-bold text-primary mb-4">Popular Links</h5>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Nosotros</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Servicios</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Soluciones</a>
+                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contactanos</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">Get In Touch</h5>
+                <h5 class="font-weight-bold text-primary mb-4">Ponte en contacto</h5>
                 <p>Dolor clita stet nonumy clita diam vero, et et ipsum diam labore</p>
                 <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
                 <p><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>
