--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DotCom - Creative Agency Website Template</title>
+    <title>Dinero Organico - Nosotros</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -39,10 +39,10 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link active">Servicios</a>
-                        <a href="pricing.html" class="nav-item nav-link">Soluciones</a>
-                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
+                        <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
+                        <a href="servicios.html" class="nav-item nav-link">Servicios</a>
+                        <a href="soluciones.html" class="nav-item nav-link">Soluciones</a>
+                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
             </nav>
@@ -127,6 +127,7 @@
                     
                 </div>
                 <div class="col-lg-6">
+                    <!--
                     <div class="row">
                         <div class="col-sm-6 pb-1">
                             <div class="d-flex flex-column align-items-center border px-4 mb-4">
@@ -153,6 +154,7 @@
                             </div>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
@@ -248,7 +250,7 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 mt-n2 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1>
+                    <img src="img/logo.png" alt="img-fluid" width="50%">
                 </a>
                 <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
                 <div class="d-flex justify-content-start mt-4">
@@ -262,24 +264,24 @@
                 <h5 class="font-weight-bold text-primary mb-4">Quick Links</h5>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Nosotros</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Servicios</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Soluciones</a>
+                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contactanos</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="font-weight-bold text-primary mb-4">Popular Links</h5>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Nosotros</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Servicios</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Soluciones</a>
+                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contactanos</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">Get In Touch</h5>
+                <h5 class="font-weight-bold text-primary mb-4">Ponte en contacto</h5>
                 <p>Dolor clita stet nonumy clita diam vero, et et ipsum diam labore</p>
                 <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
                 <p><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>
