--- a/soluciones.html
+++ b/soluciones.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DotCom - Creative Agency Website Template</title>
+    <title>Dinero Organico - Soluciones</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -24,7 +24,6 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
-
 <body>
     <!-- Navbar Start -->
     <div class="container-fluid nav-bar p-0">
@@ -39,17 +38,16 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link active">Servicios</a>
-                        <a href="pricing.html" class="nav-item nav-link">Soluciones</a>
-                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
+                        <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
+                        <a href="servicios.html" class="nav-item nav-link">Servicios</a>
+                        <a href="soluciones.html" class="nav-item nav-link">Soluciones</a>
+                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
             </nav>
         </div>
     </div>
     <!-- Navbar End -->
-
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5 mb-5">
@@ -62,7 +60,6 @@
     </div>
     <!-- Page Header Start -->
 
-
     <!-- Pricing Plan Start -->
     <div class="container-fluid pt-5">
         <div class="container">
@@ -71,11 +68,12 @@
                     <small class="d-inline bg-primary text-white text-uppercase font-weight-bold px-1">Soluciones</small>
                     <h1 class="mt-2 mb-3">Soluciones</h1>
                     <h4 class="font-weight-normal text-muted mb-4">Dinero Orgánico te ofrece soluciones reales a problemas frecuentes de sistemas burócratas, complejos y lentos.</h4>
-                    
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 mb-5">
+                <div class="col-md-8 mb-5">
+                    <img src="img/12_Preguntas_Entrevista_640x400.png" alt="">
+                    <!--
                     <div class="d-flex flex-column align-items-center justify-content-center bg-primary p-4">
                         <h3>Basic</h3>
                         <h1 class="display-4 mb-0">
@@ -110,9 +108,34 @@
                         <p>Compatible With All Browsers</p>
                         <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold my-2">Order Now</a>
                     </div>
+                    -->
                 </div>
                 <div class="col-md-4 mb-5">
-                    <div class="d-flex flex-column align-items-center justify-content-center bg-primary p-4">
+                    <div class="row mt-5">
+                        <div class="col-md-12 mt-2">
+                            <!--<i class="fas fa-circle fa-xs"></i>-->Consolidación de utilidades, donde siempre tienes utilidades. garantizadas sobre la inflación y con baja o nula tributación.
+                        </div>
+                        <div class="col-md-12 mt-2">
+                            Programas de inversión con seguro 100% deducibles de impuestos.
+                        </div>
+                        <div class="col-md-12 mt-2">
+                            Contar con capital patrimonial inembargable.
+                        </div>
+                        <div class="col-md-12 mt-2">
+                            Reducir carga impositiva.
+                        </div>
+                        <div class="col-md-12 mt-2">
+                            Dejar pensiones a las personas que aman.
+                        </div>
+                        <div class="col-md-12 mt-2">
+                            Mayores beneficios que su póliza puede ofrecer.
+                        </div>
+                        <div class="col-md-12 mt-2">
+                            Concretar indemnización de la aseguradora.
+                        </div>
+                    </div>
+                    <!--
+                        <div class="d-flex flex-column align-items-center justify-content-center bg-primary p-4">
                         <h3>Business</h3>
                         <h1 class="display-4 mb-0">
                             <small class="align-top"
@@ -128,19 +151,19 @@
                         <p>Compatible With All Browsers</p>
                         <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold my-2">Order Now</a>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
     </div>
     <!-- Pricing Plan End -->
 
-
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-white mt-5 pt-5 px-sm-3 px-md-5">
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 mt-n2 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1>
+                    <img src="img/logo.png" alt="img-fluid" width="50%">
                 </a>
                 <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
                 <div class="d-flex justify-content-start mt-4">
@@ -154,24 +177,24 @@
                 <h5 class="font-weight-bold text-primary mb-4">Quick Links</h5>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Nosotros</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Servicios</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Soluciones</a>
+                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contactanos</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="font-weight-bold text-primary mb-4">Popular Links</h5>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Nosotros</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Servicios</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Soluciones</a>
+                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contactanos</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">Get In Touch</h5>
+                <h5 class="font-weight-bold text-primary mb-4">Ponte en contacto</h5>
                 <p>Dolor clita stet nonumy clita diam vero, et et ipsum diam labore</p>
                 <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
                 <p><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>
@@ -187,10 +210,8 @@
     </div>
     <!-- Footer End -->
 
-
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-up"></i></a>
-
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
