--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <!-- Navbar Start -->
-    <div class="container-fluid nav-bar p-0">
+    <div class="container-fluid mb-5 nav-bar p-0" style="background-color: #131313;">
         <div class="container-lg p-0">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
                 <a href="index.html" class="navbar-brand">
@@ -133,9 +133,9 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <img src="img/logo.png" alt="img-fluid" width="50%">
+                    <img src="img/logo.png" alt="img-fluid" width="75%">
                 </a>
-                <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
+                
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
