--- a/servicios.html
+++ b/servicios.html
@@ -27,7 +27,7 @@
 
 <body>
     <!-- Navbar Start -->
-    <div class="container-fluid nav-bar p-0">
+    <div class="container-fluid nav-bar p-0" style="background-color: #131313;">
         <div class="container-lg p-0">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
                 <a href="index.html" class="navbar-brand">
