--- a/soluciones.html
+++ b/soluciones.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <!-- Navbar Start -->
-    <div class="container-fluid nav-bar p-0">
+    <div class="container-fluid nav-bar p-0" style="background-color: #131313;">
         <div class="container-lg p-0">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
                 <a href="index.html" class="navbar-brand">
@@ -67,7 +67,7 @@
                 <div class="col-12 col-lg-6 text-center mb-5">
                     <small class="d-inline bg-primary text-white text-uppercase font-weight-bold px-1">Soluciones</small>
                     <h1 class="mt-2 mb-3">Soluciones</h1>
-                    <h4 class="font-weight-normal text-muted mb-4">Dinero Orgánico te ofrece soluciones reales a problemas frecuentes de sistemas burócratas, complejos y lentos.</h4>
+                    <h4 class="font-weight-normal text-muted mb-4 px-0">Dinero Orgánico te ofrece soluciones reales a problemas frecuentes de sistemas burócratas, complejos y lentos.</h4>
                 </div>
             </div>
             <div class="row">
@@ -111,28 +111,26 @@
                     -->
                 </div>
                 <div class="col-md-4 mb-5">
-                    <div class="row mt-5">
-                        <div class="col-md-12 mt-2">
-                            <!--<i class="fas fa-circle fa-xs"></i>-->Consolidación de utilidades, donde siempre tienes utilidades. garantizadas sobre la inflación y con baja o nula tributación.
+                    <div class="row mt-2">
+                        <div class="col-12 px-0">
+                            <h5>
+                                Consolidación de utilidades, donde siempre tienes utilidades. garantizadas sobre la inflación y con baja o nula tributación.
+                                <br>
+                                Programas de inversión con seguro 100% deducibles de impuestos.
+                                <br>
+                                Contar con capital patrimonial inembargable.
+                                <br>
+                                Reducir carga impositiva.
+                                <br>
+                                Dejar pensiones a las personas que aman.
+                                <br>
+                                Mayores beneficios que su póliza puede ofrecer.
+                                <br>
+                                Concretar indemnización de la aseguradora.
+                            </h5>
                         </div>
-                        <div class="col-md-12 mt-2">
-                            Programas de inversión con seguro 100% deducibles de impuestos.
-                        </div>
-                        <div class="col-md-12 mt-2">
-                            Contar con capital patrimonial inembargable.
-                        </div>
-                        <div class="col-md-12 mt-2">
-                            Reducir carga impositiva.
-                        </div>
-                        <div class="col-md-12 mt-2">
-                            Dejar pensiones a las personas que aman.
-                        </div>
-                        <div class="col-md-12 mt-2">
-                            Mayores beneficios que su póliza puede ofrecer.
-                        </div>
-                        <div class="col-md-12 mt-2">
-                            Concretar indemnización de la aseguradora.
-                        </div>
+                           
+                        
                     </div>
                     <!--
                         <div class="d-flex flex-column align-items-center justify-content-center bg-primary p-4">
